--- a/1.排序篇之冒泡排序.md
+++ b/1.排序篇之冒泡排序.md
@@ -55,7 +55,7 @@ print_r( $arr );
 $arr = [ 6, 4, 7, 2, 9, 8, 1 ];
 $length = count( $arr );
 // 外部循环
-for( $outer = 0; $outer < $length; $outer++ ){
+for( $outer = 0; $outer < $length; $outer++ ){   //这个地方$outer<$length-1就好了吧，是不是多循环了一次呢？
   // 当外部循环开始第一轮的时候，从倒数第一位开始往前对比，一直到与正数第一位比较完后终止
   // 当外部循环开始第一轮的时候，从倒数第一位开始往前对比，一直到与正数第二位比较完后终止
   for( $inner = $length - 1; $inner > $outer; $inner-- ){
